tests/snapshots/insert_operations_test__O_with_indentation.snap
---
source: tests/insert_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:14
Lines: 4

Buffer:
start
    same inden[t]
    indented
end
