tests/snapshots/insert_operations_test__a_end_of_line.snap
---
source: tests/insert_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:10
Lines: 1

Buffer:
hello worl[d]
