tests/snapshots/insert_operations_test__i_empty_line.snap
---
source: tests/insert_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:7
Lines: 2

Buffer:
new tex[t]
