tests/snapshots/insert_operations_test__i_middle_of_line.snap
---
source: tests/insert_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:9
Lines: 1

Buffer:
hello big[ ]world
