tests/snapshots/insert_operations_test__i_then_enter.snap
---
source: tests/insert_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:4
Lines: 2

Buffer:
hello big
very[ ]world
