tests/snapshots/insert_operations_test__multiple_o_commands.snap
---
source: tests/insert_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:5
Lines: 4

Buffer:
start
line 1
line [2]
