tests/snapshots/insert_operations_test__o_last_line_no_newline.snap
---
source: tests/insert_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:5
Lines: 4

Buffer:
line 1
line 2
line [3]
