tests/snapshots/insert_operations_test__o_preserves_position_in_line.snap
---
source: tests/insert_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:0
Lines: 3

Buffer:
hello world
[ ]
next line
