tests/snapshots/insert_operations_test__o_single_line_no_newline.snap
---
source: tests/insert_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:4
Lines: 3

Buffer:
hello
worl[d]
